blog: Update article & fix: Some layout issue

--- a/app/blog/blog.css
+++ b/app/blog/blog.css
@@ -63,5 +63,11 @@
     embed {
       @apply w-full h-[700px];
     }
+    & + footer {
+      @apply pl-4 pt-4 border-t border-muted space-y-1;
+      div {
+        @apply text-sm;
+      }
+    }
   }
 }
